<resources>
    <string name="app_name">ExploreGang</string>
    <string name="action_settings" translatable="false">Settings</string>
    <string name="first_fragment_label" translatable="false">First Fragment</string>
    <string name="second_fragment_label" translatable="false">Second Fragment</string>
    <string name="next" translatable="false">Next</string>
    <string name="previous" translatable="false">Previous</string>
    <string name="hello_first_fragment" translatable="false">Hello first fragment</string>
    <string name="hello_second_fragment" translatable="false">Hello second fragment. Arg: %1$s</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">The password must have between 6 and 30 characters, at least one uppercase, one lowercase and one number</string>
    <string name="login_failed">"Login failed"</string>
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails</string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="login_button_login">Login</string>
    <string name="login_button_recover_password">Forgot my password</string>
    <string name="login_button_register">Sign up</string>
    <string name="login_button_skip">Guest mode</string>
    <string name="see_all_m">Ver todo</string>
    <string name="nextActivities">Next activities</string>
    <string name="nextActivity">Next activities</string>
    <string name="lastActivity">Last activity</string>
    <string name="lastActivityCarriedOut">Last activity carried out</string>
    <string name="title_home">Home</string>
    <string name="title_activities">Activities</string>
    <string name="title_asociations">Asociations</string>
    <string name="register_hint_name">Name</string>
    <string name="login_hint_email">Email</string>
    <string name="register_message_select_dob">Select a date of birth</string>
    <string name="profile_update_text_phone_code">Phone code</string>
    <string name="profile_update_hint_phone">Phone</string>
    <string name="profile_update_hint_birth_date">Birth date</string>
    <string name="login_hint_password">Password</string>
    <string name="register_hint_repeat_password">Repeat password</string>
    <string name="profile_update_hint_dni">Personal ID</string>
    <string name="profile_text_nick">Nick</string>
    <string name="register_hint_surname">Surname</string>
    <string name="register">Sing In</string>
    <string name="my_activities">My activities</string>
    <string name="see_all">See all</string>
    <string name="posts">Posts</string>
    <string name="register_update_user_data">User info</string>
    <string name="activity_register_account_data">Account information</string>
    <string name="sing_up">Sing up</string>
    <string name="tutorInformation">Tutor info</string>
    <string name="tutor_name">Tutor name</string>
    <string name="name_empty">Name empty</string>
    <string name="register_message_surname_empty">Surname empty</string>
    <string name="nick_empty">Nick empty</string>
    <string name="dob_future">The date of birth cannot be in the future</string>
    <string name="dni_invalid">Invalid personal ID</string>
    <string name="neg_next_event">There are no upcoming activities</string>
    <string name="no_activities">You are currently not enrolled at any upcoming activities</string>
    <string name="activities">Activities</string>
    <string name="no_posts">There are currently no posts to display.</string>
    <string name="register_message_email_short">Email is too short</string>
    <string name="register_message_email_incorrect">Email not valid</string>
    <string name="register_message_password_short">Password too short</string>
    <string name="register_message_passwords_different">Passwords do not match</string>
    <string name="drawer_text_logout">Logout</string>
    <string name="delete_account">Delete account</string>
    <string name="menu_support_chat">Help?</string>
    <string name="settings_tutorials">Tutorials</string>
    <string name="settings_share">Share ExploreGang</string>
    <string name="settings_text_others">Others</string>
    <string name="my_payments_data">Payment data</string>
    <string name="drawer_notification">Notifications</string>
    <string name="drawer_favorites">Favourites</string>
    <string name="drawer_clubs">Clubs</string>
    <string name="a_player">A player</string>
    <string name="login_text_access_account">Login</string>
    <string name="drawer_associations">Associations</string>
    <string name="help">Help?</string>
    <string name="social">Users</string>
    <string name="reject">Reject</string>
    <string name="write_comment_write_here">Write your comment</string>
    <string name="write_something">Write something…</string>
    <string name="ok">OK</string>
    <string name="go_to_activities">Search activities</string>
    <string name="phone_short">Insert your phone number</string>
    <string name="stay_signed_in">Stay singed in?</string>
    <string name="stay_signed_in_message">Stay signed in so you don\'t have to sign in again next time.</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="do_not_show_again">Don\'t show this again</string>
    <string name="stay_signed_in2">Stay signed in</string>
    <string name="remember_me">Remember me</string>
    <string name="acept">Acept</string>
    <string name="accept">Accept</string>
    <string name="name_channel">ExploreGang channel</string>
    <string name="delete_account_message">Are you sure to delete the account?</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="account">Account</string>
    <string name="uninstall_message">Si necesitas ayuda, desintala esta aplicación.</string>
    <string name="lorem_ipsum" translatable="false">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam eu fringilla arcu. Mauris accumsan lobortis fermentum. Integer laoreet arcu nibh, vitae finibus nisl mollis et. Ut bibendum blandit est, sit amet egestas risus interdum ut. Maecenas eu placerat augue. Vivamus eu lorem a nibh fermentum pretium vel ut neque. Morbi interdum nunc id ornare viverra. Aenean in convallis magna. Duis fringilla nisl non neque tristique, at dictum massa lobortis. Nulla imperdiet mi imperdiet accumsan pretium. Aliquam scelerisque at lacus ac euismod. Vestibulum mauris diam, feugiat a malesuada sed, dictum et metus.  Nam porttitor ultrices eros, vel tincidunt sem sodales et. Morbi auctor metus vel sapien sagittis pulvinar. Vivamus dolor ex, aliquet quis ipsum vitae, porttitor iaculis justo. Proin a aliquet sapien. Nunc lobortis nulla eros, ac hendrerit neque tincidunt vel. Sed in purus porta, egestas tellus id, consectetur quam. Etiam venenatis nulla sed congue ultrices. Aenean interdum maximus est, eu vestibulum dolor semper sed. Quisque at lacus id ante ultrices vulputate et quis lacus. Ut nec mauris convallis, molestie sem non, placerat ligula. Duis pharetra at odio at porttitor. Duis commodo sem vel mauris condimentum, vitae ullamcorper ante posuere.  Nulla molestie posuere massa, sed molestie ante ullamcorper ac. Nulla quis est neque. Sed eget sapien lacinia, bibendum purus id, feugiat nibh. Vivamus consectetur lectus a justo ornare suscipit. Mauris a libero et quam sodales pellentesque id ut ligula. Morbi hendrerit in eros ac pretium. Suspendisse potenti. Praesent varius sit amet est tincidunt accumsan. Ut orci justo, auctor sit amet metus maximus, ornare tristique felis.  Mauris ultricies tempus justo quis blandit. Mauris id dui blandit, venenatis diam quis, tempus sem. Nam at purus vitae dui mattis congue. Vivamus sit amet est augue. In leo nisi, convallis sit amet dapibus quis, rutrum non leo. Vestibulum et lacus eu lacus dictum feugiat. Quisque non velit in justo eleifend elementum id eu metus. Nam cursus ante ipsum, et suscipit urna finibus ac. Aenean cursus fermentum leo id fermentum. Praesent auctor tellus in turpis accumsan hendrerit.  In nec felis at nisl convallis elementum. Suspendisse consectetur dictum laoreet. Suspendisse semper finibus iaculis. Quisque dapibus risus ut eros consequat maximus eu non nibh. Vivamus vel enim ac quam venenatis malesuada. Vestibulum pharetra malesuada consectetur. Donec vitae sem ligula. Sed non purus accumsan, interdum urna sit amet, mattis ante. Sed est lectus, maximus vel sapien et, fermentum pharetra massa. Maecenas id dui metus. Duis consectetur ante sed tellus molestie, quis sollicitudin orci iaculis.</string>
    <string name="something_happened">Something happened</string>
    <string name="successful_registration">Successful registration</string>
    <string name="registration_failed">Registration failed</string>
    <string name="failed_register_user">Failed to register user</string>
    <string name="phone_invalid">Enter a valid phone number</string>
    <string name="association">Association</string>
    <string name="profile">Profile</string>
    <string name="hello_guest">Hello guest!</string>
    <string name="delete_account_message_error">Could not delete account</string>
    <string name="delete_account_message_success">The account has been successfully deleted</string>
    <string name="email_pass_empty">You must enter an email and a password</string>
    <string name="email_invalid">You must enter a valid email</string>
    <string name="user_not_found">User not found</string>
    <string name="incorrect_pass">Incorrect email or password</string>
    <string name="greetings_message">Hello %s!</string>
    <string name="email_alredy_used">This email is already registered</string>
    <string name="pass_empty">Password empty</string>
    <string name="document_not_null">The document is not null</string>
    <string name="document_null">The document is null</string>
    <string name="fail_getuser">Failed to get the user information</string>
    <string name="profile_update">Update profile</string>
    <string name="successful_update">User updated successfully</string>
    <string name="failed_update">Update failed</string>
    <string name="picture">Picture</string>
    <string name="go_to_login">Go to login</string>
    <string name="changepassword">Change password</string>
    <string name="current_password">Current password</string>
    <string name="new_password">New password</string>
    <string name="repeat_password">Repeat password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="location">Location</string>
    <string name="title_filters">Filters</string>
    <string name="search_for_activity">Search for activity</string>
    <string name="etSearchForActivity_hint">Name or creator…</string>
    <string name="generic_search1">Search</string>
    <string name="clean_filters">Clean filters</string>
    <string name="date">Date</string>
    <string name="exploregang">ExploreGang</string>
    <string name="version">Version 1.0</string>
    <string name="creator">Author: Ciro León Espinosa Avilés</string>
    <string name="date_format" translatable="false">dd/MM/yyyy HH:mm</string>
</resources>