<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.changePassword.ChangePasswordFragment">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/llValidateResult"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:animateLayoutChanges="true"
        android:minWidth="300dp"
        android:orientation="vertical"
        android:paddingHorizontal="20dp"
        android:paddingVertical="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/ivClose"
            style="@style/PM_CloseIcon"
            android:layout_gravity="end"
            android:layout_marginTop="-10dp"
            android:layout_marginEnd="-10dp"
            android:layout_marginBottom="10dp" />

        <TextView
            android:id="@+id/tvChangePassTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:fontFamily="@font/opensans_bold"
            android:text="@string/changepassword"
            android:textSize="20sp" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="10dp">

            <ProgressBar
                android:id="@+id/loading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:visibility="gone"

                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                 tools:visibility="visible" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_current_password"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:boxBackgroundColor="@color/transparent"
                app:endIconMode="password_toggle"
                app:errorEnabled="true"
                app:errorIconDrawable="@color/transparent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvForgotPass">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_current_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/current_password"
                    android:inputType="textPassword"
                    android:singleLine="true"
                   />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/tvForgotPass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:layout_margin="18dp"
                android:text="@string/forgot_password"

                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_new_password"
                android:layout_width="0dp"
                android:layout_height="wrap_content"


                app:boxBackgroundColor="@color/transparent"
                app:endIconMode="password_toggle"
                app:errorEnabled="true"
                app:errorIconDrawable="@color/transparent"

                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/til_current_password">

                <com.google.android.material.textfield.TextInputEditText

                    android:id="@+id/et_new_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/new_password"
                    android:inputType="textPassword"
                    android:singleLine="true" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_repeat_password"
                android:layout_width="0dp"
                android:layout_height="wrap_content"

               app:boxBackgroundColor="@color/transparent"
                 app:endIconMode="password_toggle"
                app:errorEnabled="true"
                app:errorIconDrawable="@color/transparent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/til_new_password">

                <com.google.android.material.textfield.TextInputEditText

                    android:id="@+id/et_repeat_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/repeat_password"
                    android:inputType="textPassword"
                    android:singleLine="true" />

            </com.google.android.material.textfield.TextInputLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textColorHint="@color/gray_light2"
            android:visibility="gone"
            app:boxBackgroundColor="@color/white"
            app:boxBackgroundMode="outline"
            app:boxCornerRadiusBottomEnd="9dp"
            app:boxCornerRadiusBottomStart="9dp"
            app:boxCornerRadiusTopEnd="9dp"
            app:boxCornerRadiusTopStart="9dp"

            app:boxStrokeWidth="1dp"

            app:errorIconDrawable="@color/transparent"
            app:errorTextAppearance="@style/tilMessageError"
            app:hintEnabled="false">

            <EditText
                android:id="@+id/etMessage"
                android:layout_width="match_parent"
                android:layout_height="60dp"

                android:autofillHints=""
                android:fontFamily="@font/gelion_regular"
                android:gravity="top"
                android:hint="@string/write_comment_write_here"
                android:inputType="textMultiLine|text"
                android:lines="2"
                android:maxLength="140"
                android:maxLines="2"
                android:minLines="2"
                android:padding="@dimen/small"
                android:singleLine="false"
                android:textColor="@color/secondary"
                android:textSize="@dimen/text_size_18" />
        </com.google.android.material.textfield.TextInputLayout>

        <CheckBox
            android:id="@+id/cbDefault"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="@dimen/large"
            android:text="@string/do_not_show_again"
            android:visibility="gone" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/llcButtons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"

            android:gravity="center_vertical"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/cancel_btn_cd"
                style="@style/PM_Button.OutlinedButton.Secondary"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:visibility="gone"
                tools:text="@string/reject" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnAccept"
                style="@style/PM_Button.Primary"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:text="@string/accept"
                android:visibility="visible"
                tools:visibility="visible" />

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.appcompat.widget.LinearLayoutCompat>


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="50dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="50dp" />

</androidx.constraintlayout.widget.ConstraintLayout>